<resources>
    <string name="app_name">Di Story App</string>

    <string name="err_password_length">Password at least have 6 chars</string>
    <string name="err_offline">You are offline</string>
    <string name="err_mandatory_field">This field is mandatory, please fill it</string>
    <string name="err_mandatory_image">Image is mandatory, please pick it</string>
    <string name="err_email_format">Invalid email format</string>
    <string name="err_no_data">No data available</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="i_want_to_create_an_account">I want to create an account</string>
    <string name="back">Back</string>
    <string name="create_new_user">Create New User</string>
    <string name="full_name">Full Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="list_of_story">List of Story</string>
    <string name="story_image">Story Image</string>
    <string name="hello_user">Hello, %1$s. Welcome to Di Story App</string>
    <string name="story_lat_long">Lat Long : %1$.4f, %2$.4f</string>
    <string name="create_new_story">Create New Story</string>
    <string name="description">Description</string>
    <string name="choose_your_story_image">Choose your story image</string>
    <string name="add_new_story">Add New Story</string>
    <string name="task_cancelled">Task Cancelled</string>
    <string name="change_language">Change Language</string>
    <string name="story_in_maps">Story in Maps</string>
    <string name="loading">Loading . . .</string>
    <string name="retry">Retry</string>
    <string name="current_location">Current Location</string>
    <string name="unknown">Unknown</string>
</resources>