<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signin.SignInActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/ivAppIcon"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher_round"
        android:transitionName="appIcon"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        style="@style/MaterialAlertDialog.Material3.Title.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:transitionName="appName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tvAppName">

        <com.distory.app.custom.EditTextEmail
            android:id="@+id/tietEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.distory.app.custom.EditTextPassword
            android:id="@+id/tietPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mbSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toEndOf="@id/tvAppName"
        app:layout_constraintTop_toBottomOf="@id/tilPassword" />

    <ProgressBar
        android:id="@+id/pbRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/mbSignIn"
        app:layout_constraintEnd_toEndOf="@id/mbSignIn"
        app:layout_constraintStart_toStartOf="@id/mbSignIn"
        app:layout_constraintTop_toTopOf="@id/mbSignIn" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/i_want_to_create_an_account"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/mbSignIn"
        app:layout_constraintEnd_toStartOf="@id/mbSignIn"
        app:layout_constraintStart_toStartOf="@id/tvAppName"
        app:layout_constraintTop_toTopOf="@id/mbSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>